--- a/template/page.mustache
+++ b/template/page.mustache
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="tree.css">
     </head>
     <body>
+        <ul class="hashtag-list">
+            <li><a href="#Ректорат">Ректорат</a></li>
+            <li><a href="#Департамент персонала и документооборота">Департамент персонала и документооборота</a></li>
+            <li><a href="#Департамент образовательной деятельности">Департамент образовательной деятельности</a></li>
+            <li><a href="#Отдел по делам гражданской обороны и чрезвычайным ситуациям">Отдел по делам гражданской обороны и чрезвычайным ситуациям</a></li>
+        </ul>
+
+        <div class="col-p-5 col-mm-10">
+            <div class="phone-contacts">
+                <h3>Телефоны специального назначения</h3>
+                <p>Cправочная: <code>68-68-09</code></p>
+                <p>Ответственный дежурный по университету: <code>68-78-01</code></p>
+                <p>Дежурный слесарь: <code>68-68-44</code></p>
+                <p>
+                    Дежурные электрики:<br>
+                    <span class="fz13">Учебный корпус №1</span> — <code>68-60-17</code><br>
+                    <span class="fz13">Учебный корпус №3</span> — <code>68-28-08</code>
+                </p>
+            </div>
+        </div>
         <ul class="tree">
             {{#data}}
                 {{{.}}}
