Добавлена генерация ссылок в шапке

--- a/template/page.mustache
+++ b/template/page.mustache
@@ -6,10 +6,9 @@
     </head>
     <body>
         <ul class="hashtag-list">
-            <li><a href="#Ректорат">Ректорат</a></li>
-            <li><a href="#Департамент персонала и документооборота">Департамент персонала и документооборота</a></li>
-            <li><a href="#Департамент образовательной деятельности">Департамент образовательной деятельности</a></li>
-            <li><a href="#Отдел по делам гражданской обороны и чрезвычайным ситуациям">Отдел по делам гражданской обороны и чрезвычайным ситуациям</a></li>
+            {{#links}}
+                <li><a href="#{{.}}">{{.}}</a></li>
+            {{/links}}
         </ul>
 
         <div class="col-p-5 col-mm-10">
