--- a/template/child.mustache
+++ b/template/child.mustache
@@ -2,8 +2,8 @@
 <li class="section">
     <input type="checkbox" id="{{uniqId}}" checked>
     <label for="{{uniqId}}">
-        <a id="{{name}}">
-        <div class="name">{{name}}</div>
+        <a>
+            <div class="name" id="{{name}}">{{name}}</div>
         </a>
         <div class="depinfo">
                 {{#location}}
@@ -20,7 +20,7 @@
                 {{/phone}}
                 {{#email}}
                     <div class="label">
-                        {{email}}
+                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
                     </div>
                 {{/email}}
         </div>
@@ -49,7 +49,7 @@
                 {{/phone}}
                 {{#email}}
                     <div class="label">
-                        {{email}}
+                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
                     </div>
                 {{/email}}
             </div>
@@ -66,7 +66,7 @@
                     ({{add_info}})
                 </div>
             {{/add_info}}
-            <div class="info">
+            <div class="info_employee">
                 {{#location}}
                     <div class="label">
                         {{location}}
@@ -79,7 +79,7 @@
                 {{/phone}}
                 {{#email}}
                     <div class="label">
-                        {{email}}
+                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
                     </div>
                 {{/email}}
             </div>
