--- a/template/item_with_child.mustache
+++ b/template/item_with_child.mustache
@@ -14,10 +14,12 @@
                     {{location}}
                 </div>
             {{/location}}
+		</div>
+		<div class="depinfo">
             Контактная информация:
             {{#phone}}
                 <div class="label">
-                    {{phone}}
+                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -28,17 +30,19 @@
         </div>
     </div>
     {{#manager}}
-        <div class="manager">
-            {{name}},
-        </div>
-        <div class="managerjob">
-            {{position}}
-        </div>
-        {{#add_info}}
-            <div class="managerjob">
-                ({{add_info}})
-            </div>
-        {{/add_info}}
+		<div>
+			<div class="manager">
+				{{name}},
+			</div>
+			<div class="managerjob">
+				{{position}}
+			</div>
+			{{#add_info}}
+				<div class="managerjob">
+					({{add_info}})
+				</div>
+			{{/add_info}}
+		</div>
         <div class="info">
             {{#location}}
                 <div class="label">
@@ -47,7 +51,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                    {{phone}}
+                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -77,7 +81,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                    {{phone}}
+                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
