--- a/template/item.mustache
+++ b/template/item.mustache
@@ -12,7 +12,7 @@
             Контактная информация:
             {{#phone}}
                 <div class="label">
-                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -43,7 +43,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                   <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -73,7 +73,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
