--- a/template/child.mustache
+++ b/template/child.mustache
@@ -15,7 +15,7 @@
                 Контактная информация:
                 {{#phone}}
                     <div class="label">
-                        <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                     </div>
                 {{/phone}}
                 {{#email}}
@@ -46,7 +46,7 @@
                 {{/location}}
                 {{#phone}}
                     <div class="label">
-                        <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                     </div>
                 {{/phone}}
                 {{#email}}
@@ -76,7 +76,7 @@
                 {{/location}}
                 {{#phone}}
                     <div class="label">
-                        <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                     </div>
                 {{/phone}}
                 {{#email}}
