--- a/template/item_with_child.mustache
+++ b/template/item_with_child.mustache
@@ -1,7 +1,6 @@
 <li class="section">
     <input type="checkbox" id="{{uniqId}}" checked>
     <label for="{{uniqId}}">
-    <div class="depinfo">
         <div class="name" id="{{name}}">
             {{name}}
         </div>
@@ -17,7 +16,7 @@
             Контактная информация:
             {{#phone}}
                 <div class="label">
-                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -26,7 +25,6 @@
                 </div>
             {{/email}}
         </div>
-    </div>
     {{#manager}}
 		<div>
 			<div class="manager">
@@ -49,7 +47,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
@@ -79,7 +77,7 @@
             {{/location}}
             {{#phone}}
                 <div class="label">
-                    <a href="tel:{{phone}}" class="no-link">{{phone}}</a>
+                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
                 </div>
             {{/phone}}
             {{#email}}
