Контактная информация выводится по условию, информация о сотруднике завернута в div

--- a/template/child.mustache
+++ b/template/child.mustache
@@ -3,15 +3,16 @@
     <input type="checkbox" id="{{uniqId}}" checked>
     <label for="{{uniqId}}">
         <div class="name" id="{{name}}">{{name}}</div>
-        <div class="depinfo">
-                {{#location}}
-                    Местонахождение:
-                    <div class="label">
-                        {{location}}
-                    </div>
-                {{/location}}
-		</div>
-		<div class="depinfo">
+        {{#location}}
+            <div class="depinfo">
+                Местонахождение:
+                <div class="label">
+                    {{location}}
+                </div>
+            </div>
+        {{/location}}
+        {{#isPrintContMsg}}
+            <div class="depinfo">
                 Контактная информация:
                 {{#phone}}
                     <div class="label">
@@ -23,7 +24,8 @@
                         <a href="mailto:{{email}}" class="no-link">{{email}}</a>
                     </div>
                 {{/email}}
-        </div>
+            </div>
+        {{/isPrintContMsg}}
         {{#manager}}
 			<div>
 				<div class="manager">
@@ -57,33 +59,35 @@
             </div>
         {{/manager}}
         {{#employees}}
-            <div class="employee">
-                {{name}},
-            </div>
-            <div class="employeejob">
-                {{position}}
-            </div>
-            {{#add_info}}
-                <div class="employeejob">
-                    ({{add_info}})
+            <div>
+                <div class="employee">
+                    {{name}},
                 </div>
-            {{/add_info}}
-            <div class="info_employee">
-                {{#location}}
-                    <div class="label">
-                        {{location}}
+                <div class="employeejob">
+                    {{position}}
+                </div>
+                {{#add_info}}
+                    <div class="employeejob">
+                        ({{add_info}})
                     </div>
-                {{/location}}
-                {{#phone}}
-                    <div class="label">
-                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
-                    </div>
-                {{/phone}}
-                {{#email}}
-                    <div class="label">
-                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
-                    </div>
-                {{/email}}
+                {{/add_info}}
+                <div class="info_employee">
+                    {{#location}}
+                        <div class="label">
+                            {{location}}
+                        </div>
+                    {{/location}}
+                    {{#phone}}
+                        <div class="label">
+                            <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
+                        </div>
+                    {{/phone}}
+                    {{#email}}
+                        <div class="label">
+                            <a href="mailto:{{email}}" class="no-link">{{email}}</a>
+                        </div>
+                    {{/email}}
+                </div>
             </div>
         {{/employees}}
     </label>
