--- a/template/item_with_child.mustache
+++ b/template/item_with_child.mustache
@@ -4,27 +4,29 @@
         <div class="name" id="{{name}}">
             {{name}}
         </div>
+        {{#location}}
         <div class="depinfo">
-            {{#location}}
-                Местонахождение:
-                <div class="label">
-                    {{location}}
-                </div>
-            {{/location}}
+            Местонахождение:
+            <div class="label">
+                {{location}}
+            </div>
 		</div>
-		<div class="depinfo">
-            Контактная информация:
-            {{#phone}}
-                <div class="label">
-                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
-                </div>
-            {{/phone}}
-            {{#email}}
-                <div class="label">
-                    <a href="mailto:{{email}}" class="no-link">{{email}}</a>
-                </div>
-            {{/email}}
-        </div>
+        {{/location}}
+        {{#isPrintContMsg}}
+            <div class="depinfo">
+                Контактная информация:
+                {{#phone}}
+                    <div class="label">
+                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
+                    </div>
+                {{/phone}}
+                {{#email}}
+                    <div class="label">
+                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
+                    </div>
+                {{/email}}
+            </div>
+        {{/isPrintContMsg}}
     {{#manager}}
 		<div>
 			<div class="manager">
@@ -58,33 +60,35 @@
         </div>
     {{/manager}}
     {{#employees}}
-        <div class="employee">
-            {{name}},
-        </div>
-        <div class="employeejob">
-            {{position}}
-        </div>
-        {{#add_info}}
-            <div class="employeejob">
-                ({{add_info}})
+        <div>
+            <div class="employee">
+                {{name}},
             </div>
-        {{/add_info}}
-        <div class="info_employee">
-            {{#location}}
-                <div class="label">
-                    {{location}}
+            <div class="employeejob">
+                {{position}}
+            </div>
+            {{#add_info}}
+                <div class="employeejob">
+                    ({{add_info}})
                 </div>
-            {{/location}}
-            {{#phone}}
-                <div class="label">
-                    <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
-                </div>
-            {{/phone}}
-            {{#email}}
-                <div class="label">
-                    <a href="mailto:{{email}}" class="no-link">{{email}}</a>
-                </div>
-            {{/email}}
+            {{/add_info}}
+            <div class="info_employee">
+                {{#location}}
+                    <div class="label">
+                        {{location}}
+                    </div>
+                {{/location}}
+                {{#phone}}
+                    <div class="label">
+                        <a href="tel:+7{{phone}}" class="no-link">{{phone}}</a>
+                    </div>
+                {{/phone}}
+                {{#email}}
+                    <div class="label">
+                        <a href="mailto:{{email}}" class="no-link">{{email}}</a>
+                    </div>
+                {{/email}}
+            </div>
         </div>
     {{/employees}}
     </label>
