--- a/template/child.mustache
+++ b/template/child.mustache
@@ -2,7 +2,7 @@
 <li class="section">
     <input type="checkbox" id="{{uniqId}}" checked>
     <label for="{{uniqId}}">
-        <div class="name" id="{{name}}">{{name}}</div>
+        <div class="name" id="{{uniqDepId}}">{{name}}</div>
         {{#location}}
             <div class="depinfo">
                 Местонахождение:
