--- a/template/item.mustache
+++ b/template/item.mustache
@@ -1,5 +1,5 @@
 <li class="section">
-    <div class="name" id="{{name}}">{{name}}</div>
+    <div class="name" id="{{uniqDepId}}">{{name}}</div>
     {{#location}}
         <div class="depinfo">
             Местонахождение:
