--- a/template/item_with_child.mustache
+++ b/template/item_with_child.mustache
@@ -1,7 +1,7 @@
 <li class="section">
     <input type="checkbox" id="{{uniqId}}" checked>
     <label for="{{uniqId}}">
-        <div class="name" id="{{name}}">
+        <div class="name" id="{{uniqDepId}}">
             {{name}}
         </div>
         {{#location}}
