--- a/template/page.mustache
+++ b/template/page.mustache
@@ -9,8 +9,8 @@
 		<div class="col-p-5 col-mm-10">
         <ul class="hashtag-list">
             {{#links}}
-                <a href="#{{.}}" class="hashtag">
-					<li>{{.}}</li>
+                <a href="#{{depId}}" class="hashtag">
+					<li>{{depName}}</li>
 				</a>
             {{/links}}
         </ul>
